[gd_scene load_steps=26 format=3 uid="uid://ck3m3011vrrgm"]

[ext_resource type="Script" uid="uid://dhmppoqbaejrn" path="res://characters/the_witch/the_witch.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://by7knt72ix16d" path="res://assets/player/witch4.png" id="2_dirf7"]
[ext_resource type="Script" uid="uid://c8nuytiag3hsy" path="res://characters/the_witch/enemy_spawner.gd" id="2_xxgcw"]
[ext_resource type="Texture2D" uid="uid://hdjfgk8iim74" path="res://assets/player/witch5.png" id="4_idpv6"]
[ext_resource type="Texture2D" uid="uid://vcfi5b4e835j" path="res://assets/player/witch6.png" id="5_rpf03"]
[ext_resource type="Texture2D" uid="uid://dopi03mkv0fuu" path="res://assets/player/witch7.png" id="6_x5dtk"]
[ext_resource type="Texture2D" uid="uid://df3sga3c43m3v" path="res://assets/player/witch8.png" id="7_3t07l"]
[ext_resource type="Texture2D" uid="uid://dia45pribm0wv" path="res://assets/player/witch9.png" id="8_icpky"]
[ext_resource type="Texture2D" uid="uid://bq7ytyb4ugbsp" path="res://assets/player/witch10.png" id="9_58jvb"]
[ext_resource type="Texture2D" uid="uid://cfqubdey3mtdq" path="res://assets/player/witch11.png" id="10_8l73k"]
[ext_resource type="Texture2D" uid="uid://cd6nvoo554p01" path="res://assets/player/witch12.png" id="11_aqrcq"]
[ext_resource type="Script" uid="uid://ik27fwydfjmr" path="res://characters/the_witch/xp_indicator.gd" id="14_1cd3f"]
[ext_resource type="PackedScene" uid="uid://bxj1i7s3b4amk" path="res://characters/common/DamageIndicator/damage_indicator.tscn" id="15_upxre"]
[ext_resource type="PackedScene" uid="uid://bwdqxkchthan0" path="res://characters/common/health_bar/health_bar.tscn" id="16_8l73k"]
[ext_resource type="PackedScene" uid="uid://dkky6meo7gsyq" path="res://weapons/the_witch/broom/broom.tscn" id="17_d2agh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 22.0
height = 44.0

[sub_resource type="Gradient" id="Gradient_onrkg"]
offsets = PackedFloat32Array(0, 0.344156, 0.688312)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i3pqv"]
gradient = SubResource("Gradient_onrkg")
fill = 1
fill_from = Vector2(0.495413, 0.486239)

[sub_resource type="Curve2D" id="Curve2D_508ok"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -831.959, -465.981, 0, 0, 0, 0, 821.027, -462.057, 0, 0, 0, 0, 812.049, 450.285, 0, 0, 0, 0, -820.986, 450.285, 0, 0, 0, 0, -831.959, -460.095)
}
point_count = 5

[sub_resource type="Animation" id="Animation_on558"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.433333, 0.533333, 0.7, 0.866667, 1.23333, 1.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_dirf7"), ExtResource("4_idpv6"), ExtResource("5_rpf03"), ExtResource("6_x5dtk"), ExtResource("7_3t07l"), ExtResource("2_dirf7"), ExtResource("4_idpv6"), ExtResource("2_dirf7")]
}

[sub_resource type="Animation" id="Animation_gqopd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_dirf7")]
}

[sub_resource type="Animation" id="Animation_5mkjs"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4, 0.633333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_icpky"), ExtResource("9_58jvb"), ExtResource("10_8l73k"), ExtResource("11_aqrcq")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icpky"]
_data = {
&"Idle": SubResource("Animation_on558"),
&"RESET": SubResource("Animation_gqopd"),
&"Walk": SubResource("Animation_5mkjs")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8l73k"]
radius = 19.0
height = 78.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8l73k"]
radius = 88.6848

[node name="TheWitch" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_onrkg")
_can_move = false
_speed = 100.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_dirf7")
region_enabled = true
region_rect = Rect2(0, 0, 30.563, 76)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="CanvasLayer"]
position = Vector2(2.00011, -2)
scale = Vector2(23.9375, 13.2266)
color = Color(1, 0.918333, 0.65, 1)
texture = SubResource("GradientTexture2D_i3pqv")
offset = Vector2(35, 35)

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("2_xxgcw")

[node name="SpawnPath" type="Path2D" parent="EnemySpawner"]
position = Vector2(1.97937, 9)
scale = Vector2(1.00243, 1.01935)
curve = SubResource("Curve2D_508ok")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemySpawner/SpawnPath"]
position = Vector2(-831.959, -465.981)
rotation = 0.00237387

[node name="SpawnPoint" type="Marker2D" parent="EnemySpawner/SpawnPath/PathFollow2D"]
gizmo_extents = 85.5

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
process_callback = 0
wait_time = 3.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_icpky")
}
autoplay = "Idle"

[node name="DamageableArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageableArea"]
shape = SubResource("CapsuleShape2D_8l73k")
debug_color = Color(0.734018, 0.349385, 0.801787, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("16_8l73k")]
position = Vector2(0, -49)

[node name="WeaponPickupRangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPickupRangeArea"]
shape = SubResource("CircleShape2D_8l73k")
debug_color = Color(0.603271, 0.540052, 0.126825, 0.42)

[node name="Broom" parent="." instance=ExtResource("17_d2agh")]
position = Vector2(2, -9)

[node name="XpIndicator" type="Node2D" parent="."]
position = Vector2(0, -57)
script = ExtResource("14_1cd3f")

[node name="DamageIndicator" parent="." instance=ExtResource("15_upxre")]

[connection signal="timeout" from="EnemySpawner/SpawnTimer" to="EnemySpawner" method="_on_spawn_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="WeaponPickupRangeArea" to="." method="_on_weapon_pickup_range_area_body_entered"]
